Correct page layout problems

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,24 @@ body {
     color: var(--main-bg-color)
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:active {
+    color: black;
+}
+
+.neutral-star {
+    color: #D9D9D9;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+}
+
 /****** Hebergements And Populaires ***********/
 .hebergements-and-populaires {
     display: flex;
@@ -75,7 +93,7 @@ body {
 .hebergements-cards {
     display: flex;
     flex-direction: row;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
     justify-content: space-around;
     margin-bottom: 30px;
 }
@@ -183,14 +201,11 @@ nav a {
 nav a:visited {
     color: black;
 }
+
 .navigation a:hover {
     color: #0065FC;
     border-top: solid 2px #0065FC;
     padding-top: 17px;
-}
-.form-searsh {
-    display: flex;
-    width: 100%;
 }
 
 #navbar {
@@ -207,6 +222,10 @@ nav a:visited {
 }
 
 /* searsh bar creation  */
+.form-searsh {
+    display: flex;
+    width: 100%;
+}
 .searsh-bar {
     display: flex;
     flex-direction: row;
@@ -219,7 +238,7 @@ nav a:visited {
 }
 
 label {
-    border:solid 1px #F2F2F2;
+    border: solid 1px #F2F2F2;
     border-right: none;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
@@ -233,8 +252,12 @@ input {
     border-left: none;
     border-right: none;
     padding: 10px;
-    color: black;
     font-weight: 700;
+}
+
+::placeholder {
+    color: black;
+    opacity: 1;
 }
 
 .searsh-bar button {
@@ -245,17 +268,18 @@ input {
     padding: 10px;
     color: white;
     font-weight: 700;
+    cursor: pointer;
 }
 
 .fa-magnifying-glass {
     display: none;
-    color:white;
+    color: white;
     visibility: hidden;
 }
 
 /* Filters  */
 .section-filters {
-    display:flex;
+    display: flex;
     flex-direction: row;
     align-items: center;
     gap: 30px;
@@ -265,13 +289,14 @@ input {
 .section-filters button {
     border: solid 2px #D9D9D9;
     border-radius: 25px;
-    background-color:white;
+    background-color: white;
     font-weight: 700;
-    padding: 10px; 
+    padding: 10px;
+    cursor: pointer;
 }
 
 .section-filters button:hover {
-    background-color:#DEEBFF;
+    background-color: #DEEBFF;
 }
 
 .section-filters i {
@@ -279,10 +304,10 @@ input {
 }
 
 .fa-info {
-    border:solid 1px #D9D9D9;
+    border: solid 1px #D9D9D9;
     border-radius: 20px;
     background-color: white;
-    padding:2px 7px 2px 7px;
+    padding: 2px 7px 2px 7px;
 }
 
 /* Activities section  */
@@ -291,6 +316,7 @@ input {
     justify-content: space-between;
     margin-top: 30px;
 }
+
 .activities-cards .card {
     width: 20%;
     height: 400px;
@@ -302,13 +328,15 @@ input {
     height: 345px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    
+
 }
+
 .activities-cards .card-txt {
-    text-align:left;
+    text-align: left;
     padding-left: 10px;
     padding-bottom: 10px;
 }
+
 .activities {
     padding-top: 30px;
     padding-bottom: 30px;
@@ -324,34 +352,9 @@ input {
     margin-top: 30px;
 }
 
-.footer_text a {
-    text-decoration: none;
-    color: black;
-}
-
-.footer_text a:active {
-    color: black;
-}
-
- a {
-    text-decoration: none;
-    color: black;
-    display: inline;
-}
-
-.neutral-star {
-    color:#D9D9D9;
-}
-
-/* cards transition  */
-.card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0px 10px 20px rgba(0,0,0,0.3);
-  }
-  
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
-/****** Media queries ***********/ 
+/****** Media queries ***********/
 @media (max-width: 1237px) {
 
     .hebergements-and-populaires section {
@@ -372,11 +375,12 @@ input {
 
     .activities-cards .card-title {
         font-size: 14px;
-      } 
+    }
 }
 
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
+
     .hebergements-and-populaires {
         flex-direction: column;
     }
@@ -407,28 +411,30 @@ input {
     .populaires-cards .card-subtitle {
         font-size: 13px;
     }
+
     .section-filters {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         gap: 0px;
     }
+
     .card-link {
         display: flex;
         width: 90%;
         height: 100%;
         text-decoration: none;
         justify-content: center;
-      }
-      
-      .activities-cards .card-title {
+    }
+
+    .activities-cards .card-title {
         font-size: 14px;
-      }
+    }
 }
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
-    
+
     .navigation a:hover {
         color: #0065FC;
         border-top: none;
@@ -455,10 +461,11 @@ input {
         border-bottom-width: 2px;
         border-bottom-style: solid;
         border-bottom-color: #D9D9D9;
-        padding: 15px;
+        padding: 17px;
     }
 
-    #nav1, #nav2 {
+    #nav1,
+    #nav2 {
         width: 50%;
     }
 
@@ -502,16 +509,23 @@ input {
         padding-top: 15px;
     }
 
-    label, input {
+    label,
+    input {
         padding: 19px;
     }
+
     .searsh-bar button {
         padding: 19px;
-        
+
     }
 
     .fa-magnifying-glass {
-        display:contents;
+        display: block;
+        visibility: visible;
+    }
+
+    #search-button {
+        display: none;
     }
 
     /* filters  */
@@ -520,8 +534,9 @@ input {
         gap: 0px;
         padding: 0px;
     }
+
     .section-filters h3 {
-        padding-left: 30px; 
+        padding-left: 30px;
         padding-bottom: 15px;
         padding-top: 15px;
     }
@@ -544,10 +559,13 @@ input {
     }
 
     .hebergements-cards {
-        margin-top:0px
+        margin-top: 0px
     }
 
-    .populaires-cards, .activities-cards, .footer_section, .hebergements-cards {
+    .populaires-cards,
+    .activities-cards,
+    .footer_section,
+    .hebergements-cards {
         flex-direction: column;
     }
 
@@ -600,7 +618,7 @@ input {
         background-color: var(--main-bg-color);
         margin-top: 15px;
     }
-    
+
     .footer_text {
         padding-left: 30px;
         padding-right: 30px;
@@ -614,7 +632,7 @@ input {
     .activities-cards img {
         height: 192px;
     }
-    
+
     .hebergements-and-populaires .hebergements {
         background-color: #ffffff;
         margin-top: 25px;
@@ -636,11 +654,11 @@ input {
     }
 
     #card2 {
-        order:5;
+        order: 5;
     }
 
     #card3 {
-        order:2;
+        order: 2;
     }
 
     #card4 {
@@ -654,6 +672,5 @@ input {
     #card6 {
         order: 4;
     }
-
 
 }
